minor frontend changes

--- a/src/components/Assessments/AssessmentResults.css
+++ b/src/components/Assessments/AssessmentResults.css
@@ -154,6 +154,7 @@
 
 .question-header {
   display: flex;
+  color: black;
   justify-content: space-between;
   align-items: flex-start;
   margin-bottom: 12px;
